# kusto-mcp

./: .syft.yaml  Makefile  README.md  pyproject.toml  sbom.json
.github/workflows/: dev-validation.yml  main-validation.yml  publish.yml
samples/codes/: convert_csv_schema_to_json.py  invoke_tools.py
samples/schemas/: DeviceEvents.json  DeviceFileEvents.json  DeviceInfo.json  DeviceNetworkEvents.json  DeviceProcessEvents.json
samples/schemas_csv/: DeviceEvents.csv  DeviceFileEvents.csv  DeviceNetworkEvents.csv  DeviceProcessEvents.csv
schemas/: table.json
src/kusto_mcp/: __init__.py  __main__.py  loaders.py  models.py  server.py  utils.py
tests/: __init__.py  conftest.py  test_loaders.py  test_models.py  test_server.py  test_utils.py
