[project]
name = "kusto-mcp"
version = "0.1.0"
description = "MCP server that exposes Kusto table schemas as tools"
readme = "README.md"
authors = [
    { name = "Jiayang", email = "clouds_couch_0c@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
    "pydantic>=2.12.5",
]

[project.scripts]
server = "kusto_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # pycodestyle
  "E",
  "W",
  # google
  "D",
  "D401",
  "D417",
  # pydocstyle
  "Q",
]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]
