[project]
name = "kusto-mcp"
version = "0.1.2"
description = "MCP server that exposes Kusto table schemas as tools"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Jiayang", email = "clouds_couch_0c@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/Jiayang-Lai/kusto-mcp"
Documentation = "https://github.com/Jiayang-Lai/kusto-mcp/blob/main/README.md"
Repository = "https://github.com/Jiayang-Lai/kusto-mcp"

[project.scripts]
server = "kusto_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # pycodestyle
  "E",
  "W",
  # google
  "D",
  "D401",
  "D417",
  # pydocstyle
  "Q",
]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--cov=kusto_mcp --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "*/__main__.py",
    "*/__init__.py",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
